[python] update python metamodel, add SHACL constraint
- change concepts to be more general, i.e. for all attributes of a
  module instead of just classes
- add SHACL constraint for Python MM
- this is meant to work with python module under minhnh/rdf-tools

--- a/languages/python.json
+++ b/languages/python.json
@@ -3,8 +3,11 @@
         "xsd": "http://www.w3.org/2001/XMLSchema#",
         "py": "https://secorolab.github.io/metamodels/languages/python#",
 
-        "module": { "@id": "py:module", "@type": "xsd:string" },
-        "class-name": { "@id": "py:class-name", "@type": "xsd:string" },
+        "PyClass": { "@id": "py:Class" },
+        "PyModuleAttribute": { "@id": "py:ModuleAttribute" },
+        "module-name": { "@id": "py:module-name", "@type": "xsd:string" },
+        "attribute-name": { "@id": "py:attribute-name", "@type": "xsd:string" },
+
         "ArgValue": { "@id": "py:ArgValue" },
         "ArgName": { "@id": "py:ArgName", "@type": "xsd:string" }
     }
